fix header alignment

--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,7 @@ ul {
 
 .header {
   display: flex;
-  align-portfolio-items: center;
+  align-items: center;
   justify-content: space-between;
   width: 100%;
 }
